--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
             <li>Contact</li>
             <li>About Us</li>
         </ul>
+
+        <!-- Testing Section-->
+        <h1>
+            THIS IS A TESTING ZONE TO SEE WHAS A GONNA HAPPEN BABY
+        </h1>
     </body>
     <hr>
     <footer>
