updating nav bar

--- a/index.html
+++ b/index.html
@@ -23,13 +23,15 @@
             </ul>
           </nav>
         <h1>GEM</h1>
-        <table>
-            <tr>
-                <td><a href="./Trading Plans.html">Trading Plans <a></td>
-                <td> <a href="./Tax.html">Tax</a></td>
-                <td><a href="./Pricing.html">Pricing<a></td>
-            </tr>
-        </table>
+
+        <!-- Navigation Section -->
+        <div class="navigation">
+            <p>
+                <a href="./Trading Plans.html">Trading Plans <a>
+                <a href="./Tax.html">Tax</a>
+                <a href="./Pricing.html">Pricing<a>
+            </p>
+        </div>
         <!-- Banner Section -->
         <div>
             <h1>
