changing the navigation class

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <h1>GEM</h1>
 
         <!-- Navigation Section -->
-        <div class="navigation">
-            <p>
+        <div>
+            <p class="navigation">
                 <a href="./Trading Plans.html">Trading Plans <a>
                 <a href="./Tax.html">Tax</a>
                 <a href="./Pricing.html">Pricing<a>
