--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
                 <a href="./Pricing.html">Pricing<a>
             </p>
         </div>
+
         <!-- Banner Section -->
+        
         <div>
             <h1>
                 <img id="banner-gem" src="Resources/images/dashboard.png" class="banner1">
@@ -49,9 +51,18 @@
         </p>
     </body>
     <hr>
-    <footer>
-        <p>Careers</p>
-        <p>Copyright 2024 - Guided Equity Management, Inc.</p>
-    </footer>
+
+    <!-- Footer logo -->
+    <div class="Footer">
+    <img src="./Resources/images/gem_icon.png">
+
+    <!-- Footer nav -->
+
+        <div class="footer-nav">
+            <p>Blog</p>
+            <p>Support</p>
+            <p>Contact</p>
+        </div>
+    </div>
 
 </html>
