jan 30 lots of changes

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <p>Blog</p>
             <p>Support</p>
             <p>Contact</p>
+            <p>Integrations</p>
         </div>
     </div>
 
