--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <!-- Footer logo -->
     <div class="Footer">
-    <img src="./Resources/images/gem_icon.png">
+    <img id="footer-gem" src="./Resources/images/gem_icon.png">
 
     <!-- Footer nav -->
 
