--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <hr>
 
     <!-- Footer logo -->
-    <div class="Footer">
+    <div>
     <img id="footer-gem" src="./Resources/images/gem_icon.png">
 
     <!-- Footer nav -->
