--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
 
         <!-- Navigation Section -->
         <div>
-            <p class="navigation">
-                <a href="./Trading Plans.html">Trading Plans <a>
-                <a href="./Tax.html">Tax</a>
-                <a href="./Pricing.html">Pricing<a>
-            </p>
+            <ul class="navigation">
+                <li><a href="./Trading Plans.html">Trading Plans</a></li>
+                <li><a href="./Tax.html">Tax</a></li>
+                <li><a href="./Pricing.html">Pricing<a></li>
+                <li><a href="./Integrations">Integrations</a></li>
+            </ul>
         </div>
 
         <!-- Banner Section -->
